# SequencedHelixCoilSampler

./: .gitignore  ArcSample.cpp  BernoulliScan.cpp  CMakeLists.txt  CustomMatrix.cpp  EquilibriumPartitionMapGenerator.cpp  FoldModels.cpp  NearEquilibriumScan.cpp  README.md  RandomParamErrorScan.cpp  Utilities.cpp  pr_body.md  readme_md.md
.github/workflows/: cmake-single-platform.yml
config/: AllFoldPhaseTransTest.json  AllFoldPhaseTransTest5.json  bernoulli_LOW0_b-0p5-1-0p01_e-m2-3-0p5_l-4.json  bernoulli_LOW0_b-0p95-1-0p001_e-m2-3-0p5_l-4 copy.json  bernoulli_LOW1_logb-m16-m4-0p5_e-m1p5-m0p5-0p01_l-4.json  bernoulli_test.json  err_ASYM_loge-m8-m1-0p5_y-0-1-0p1_l-11.json  error_test.json  longentropyverify_xlog-m8-m1-1-y_30_l-9.json  longlengthvary_phasetrans_bern_0p5_x-30-10-100_y-0-1-0p25.json  longverify_ashelixlowsymcoil_randbern_xlog-m8-m1-0p5-y_10_l-100.json  longverify_near_phase_trans_x-0p5-y_1_l-300.json  longverify_phasetrans_3p75_bern-0p5_xlog-m8-m1-0p5-y_10_l-300.json  longverify_phasetrans_bern_0p5_xlog-1p24-1p26-0p001-y_0p5_l-300.json  longverify_phasetrans_bern_0p5_xlog-2-4-0p5-y_0p5_l-300.json  longverify_phasetrans_bern_0p5_xlog-m2-4-0p25-y_0p5_l-300.json  longverify_phasetrans_simple_tolerance_logx-m5-m1-0p5_logy_0p25-3-0p25_l-100-percent.json  longverify_phasetrans_tolerance_logx-m5-m1-0p5_logy_0p25-3-0p25_l-100-percent.json  longverify_phasetrans_tolerance_logx-m5-m1-0p5_logy_m2-4-0p25_l-300.json  longverify_phasetrans_tolerance_logx-m7-m1-0p5_logy_m2-0-0p25_l-100-percent.json  longverify_rand-lowrank-offdiagonal_xlog-m10-0-1-y_30_l-300.json  longverify_rand-lowrank-offdiagonal_xlog-m300-0-1-y_30_l-300.json  tv_fixedSYM_e2_n-1b-0p9e-0p001_randte_x-0-1-0p05_y-2_1-11.json  tv_fixedSYM_e2_pstr_randte_x-0-1-0p05_y-2_1-11.json  tv_fixedSYM_pstr_randte_x-0-1-0p05_y-30_1-11.json  tv_fp_LOW1_logx-0-1-0p001_e-m1p5-m0p5_template1_l-4.json  tv_rand_randtr_x-0-0p001-0p1_y-100_l-4.json  tv_rand_randtr_x-0-1-0p05_y-100_l-3.json  tv_rand_randtr_x-0p1-1-0p1_y-100_l-4.json  tv_rand_randtr_xlog-m16-0-0p5_y-100_l-4.json  tv_rand_randtr_xlog-m8-0-0p5_y-100_l-3.json  tv_rand_randtr_xlog-m8-0-0p5_y-10_l-4.json  tv_rand_randtr_xlog-m8-0-0p5_y-30_l-11.json
include/: ConfigurableScanner.h  CustomMatrix.h  EquilibriumPartitionMapGenerator.h  FoldModels.h  Utilities.h
scripts/: compare_tsv.py
src/: ConfigurableScanner.cpp  CustomMatrix.cpp  CustomMatrix.h.txt  EquilibriumPartitionMap.cpp.txt  EquilibriumPartitionMapGenerator.cpp  EquilibriumPartitionMapGenerator.h  EquilibriumPartitionMapGenerator.h.txt  FoldModels.cpp  FoldModels.cpp.txt  FoldModels.h  FoldModels.h.txt  Utilities.cpp  Utilities.cpp.txt  Utilities.h  Utilities.h.txt  config_scanner (1).txt  config_scanner.txt  config_scanner_header.txt  equilibrium_header.txt  main.cpp  utilities_header.txt
test/config/: bernoulli_test.json  bernoulli_test.tsv  error_test.json  tvwalk_fprt_test.json  tvwalk_fprte_test.json  tvwalk_rprt_test.json  tvwalk_test.json
test/expected/: bernoulli_expected.tsv  error_expected.tsv  error_test.tsv  tvwalk_expected.tsv  tvwalk_fprt_expected.tsv  tvwalk_fprte_expected.tsv  tvwalk_rprt_expected.tsv
tests/: BernoulliScan.cpp  RandomParamErrorScan.cpp
